Remove any extra market *.apk downloads from cache

--- a/prebuilt/sbin/sysinit.rc
+++ b/prebuilt/sbin/sysinit.rc
@@ -14,3 +14,6 @@ df -h /cache | tail -n 1 | awk '
 
 #runparts:
 /system/bin/logwrapper /system/xbin/run-parts /system/etc/init.d
+
+#cleanup cache of extra *.apk downloads
+rm -rf /cache/downloadfile*.apk
